--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-font": "~11.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
